--- a/src/css/SignIn.module.css
+++ b/src/css/SignIn.module.css
@@ -60,6 +60,13 @@
     font-weight: 700;
     margin-right: 12px;
 }
+#textPoint{
+    margin-bottom: 12px;
+    color: #8aa1a1;
+    font-size: 13px;
+    font-weight: 700;
+    margin-right: 12px;
+}
 #link:hover{
     color: #627272;
 }
