--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-body{
-  width: 100%;
-  height: 100%;
-}
 .App {
+  width: 100%;
+  height: 1080px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  background-color: #e0e0e0;
 }
