--- a/src/css/SignIn.module.css
+++ b/src/css/SignIn.module.css
@@ -1,11 +1,14 @@
 .main{
     width: 480px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 300px;
+    height: 300px;
+    margin: 250px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 25px;
+    background-color: #fff;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
 }
 .title{
     font-size: 48px;
@@ -42,7 +45,7 @@
     transition: all 0.2s ease-out;
 }
 .inputs:focus, .inputs:not(:placeholder-shown){
-    border-bottom: solid 1px #99cccc;
+    border-bottom: solid 1px rgb(0, 217, 148);
     outline:none;
 }
 .linkBox{
@@ -51,7 +54,7 @@
 }
 #link{
     margin-bottom: 12px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0);
     color: #8aa1a1;
     border: 0;
     text-decoration: none;
@@ -79,9 +82,9 @@
     border: none;
     font-size: 20px;
     font-weight: 700;
-    background-color: #99cccc;
+    background-color: rgb(0, 217, 148);
     color: #fff;
 }
 .submitBtn:hover{
-    background-color: #8bbbbb;
+    background-color: rgb(56, 217, 169);
 }
