--- a/src/css/SignIn.module.css
+++ b/src/css/SignIn.module.css
@@ -78,6 +78,7 @@
     width: 100%;
     height: 38px;
     margin-top: 24px;
+    cursor: pointer;
     border-radius: 10px;
     border: none;
     font-size: 20px;
