--- a/src/css/SignIn.module.css
+++ b/src/css/SignIn.module.css
@@ -1,11 +1,15 @@
 .main{
-    width: 480px;
+    width: 20%;
     height: 300px;
-    margin: 250px;
-    padding: 100px;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 5%;
+    padding-top: 2%;
+    padding-bottom: 3%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border-radius: 25px;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
