--- a/src/css/Signup.module.css
+++ b/src/css/Signup.module.css
@@ -1,12 +1,13 @@
 .main{
-    width: 480px;
+    width: 20%;
     height: 400px;
-    margin: 150px;
-    padding: 100px;
-    padding-top: 50px;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border-radius: 25px;
     background-color: #fff;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
@@ -111,20 +112,4 @@
 }
 .checkData:hover{
     background-color: rgb(56, 217, 169);
-}
-.backBtu{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: 170px;
-    right: 420px;
-    border: 0;
-    border-radius: 100%;
-    background-color: rgb(255, 74, 74);
-}
-.backBtu:hover{
-    cursor: pointer;
-    border: 0;
-    border-radius: 100%;
-    background-color: rgb(255, 31, 31);
 }
