--- a/src/css/Signup.module.css
+++ b/src/css/Signup.module.css
@@ -1,3 +1,10 @@
+.box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .main{
     width: 20%;
     height: 400px;
@@ -47,17 +54,13 @@
     transition: all 0.2s ease-out;
 }
 .inputs:focus, .inputs:not(:placeholder-shown){
-    border-bottom: solid 1px rgb(0, 217, 148);
+    border-bottom: solid 1px #00d994;
     outline:none;
 }
 .inputBox{
     position: relative;
     width: 100%;
     margin: 10px 0;
-}
-.linkBox{
-    position: absolute;
-    bottom: 0px;
 }
 #link{
     margin-bottom: 12px;
